WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180222
[Cocoa] Web Automation: _WKAutomationSessionConfiguration leak
https://bugs.webkit.org/show_bug.cgi?id=180222
Summary
[Cocoa] Web Automation: _WKAutomationSessionConfiguration leak
Joseph Pecoraro
Reported
2017-11-30 15:34:54 PST
_WKAutomationSessionConfiguration leak Caught by searching for instances of " new]".
Attachments
[PATCH] Proposed Fix
(1.52 KB, patch)
2017-11-30 15:36 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2017-11-30 15:36:36 PST
Created
attachment 328044
[details]
[PATCH] Proposed Fix
Blaze Burg
Comment 2
2017-11-30 15:51:11 PST
Comment on
attachment 328044
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 3
2017-11-30 16:40:16 PST
Comment on
attachment 328044
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 328044 Committed
r225371
: <
https://trac.webkit.org/changeset/225371
>
WebKit Commit Bot
Comment 4
2017-11-30 16:40:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-11-30 16:41:24 PST
<
rdar://problem/35786359
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug