[Cocoa] Web Automation: _WKAutomationSessionConfiguration leak https://bugs.webkit.org/show_bug.cgi?id=180222

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-11-30
Reviewed by Brian Burg.

* UIProcess/Cocoa/AutomationClient.mm:
(WebKit::AutomationClient::requestAutomationSessionWithCapabilities):

Canonical link: https://commits.webkit.org/196221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225371 268f45cc-cd09-0410-ab3c-d52691b4dbfc